[refactor] VO 식별자로 바꾼 버전을 테스트 업데이트